--- a/jenkinsDockerDemo/Dockerfile
+++ b/jenkinsDockerDemo/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:11
+ADD target/jenkinsDockerDemo-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
-ADD target/jenkins-docker-demo.jar jenkins-docker-demo.jar
-ENTRYPOINT ["java","-jar","jenkins-docker-demo.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
